2004-04-28 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b66

	* Change: BIG Change. Gallery is now ~90% valid HTML 4.01.
		  This includes HTML Code tidying.

	* Change: Complete Remove of global $GALLERY_BASEDIR

	* Change: Replace of <?php echo getStyleSheetLink() ?>
		  into <?php common_header(); ?>

	* New: Added possibility add parameter to gallery_validation_link()

	* Fix: Correct Title in move_photo.php

	* Change: Beautified some pages. E.g. Photo Properties

	
2004-04-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b65

	* Change: popup_js, redux. Only quote the string if it contains
	  (^http|^ftp).  JS functions don't like to be quoted.

2004-04-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b64

	* Change: Properly quote popup_js's return URL and escape quotes
	  which would otherwise break the string early.

2004-04-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b63

	* Change: Move htmlspecialchars() to prevent JS url break
	  ---- REVERTED

2004-04-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b62

	* Change: Rename "ROOT" option in move scripts to ".root" to 
	  prevent interaction with a user album, which could be named
	  "ROOT"
	  - All user-viewable (translatable) text is unchanged; "ROOT"
	    still makes sense, visually.

2004-04-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b61

	* Fix: Adapted move_album issue from b49
	  Until a ".root" album object can be created, move_album needs to
	  not try and check getNestedAlbum against a rooted album.
	  Added isRoot() check prior to getNestedAlbum to bypass.

2004-04-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b60

	* Change: view_album and view_photo are valid, again.
	  (I hadn't tested with rewrite disabled)

2004-04-25 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b59

	* Change: view_album and view_photo are not valid 4.01

	* Change: More use of doctype() and common_header()

	* Fix: Removed warnings in register.php
